@@ -575,4 +575,4 @@ sqrt(22) mod 149						[52,97]
 1i^3								-1i
 1i^4								1
 1i^5								1i
-1i^5070602400912917605986812821505				((1i)^5070602400912917605986812821505)
+1i^5070602400912917605986812821505				1i
