@@ -1,3 +1,8 @@
+Wed Oct 29 16:59:11 2003  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: allow very very very large powers of 1,-1,1i and -1i.
+	  also ui divisions should return an int if the denominator is 1
+
 Tue Oct 28 10:15:10 2003  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.c: be nicer in integer powers of pure imaginary
